tests/invalid/syntax/enum_duplicate_variants.nyx
// Invalid: Enum with duplicate variant names
enum DuplicateVariants
    OPTION_A
    OPTION_B
    OPTION_A
